--- a/HW2_The_Perceptron.ipynb
+++ b/HW2_The_Perceptron.ipynb
@@ -383,7 +383,7 @@
     "```\n",
     "You will get different results with different hyperparameters.\n",
     "\n",
-    "#### TODO Add your answer here (code and output in the format above) \n"
+    "### Question 2 Solution\n"
    ]
   },
   {
